[package]
name = "scm_finance"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc2", path = "../../crates/primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc2", path = "../../crates/metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc2", path = "../../crates/env", default-features = false }
ink_storage = { version = "3.0.0-rc2", path = "../../crates/storage", default-features = false }
ink_lang = { version = "3.0.0-rc2", path = "../../crates/lang", default-features = false }
ink_prelude = { version ="3.0.0-rc2", path = "../../crates/prelude",  default-features = false  }
scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.5", default-features = false, features = ["derive"], optional = true }
erc20 = {version="0.1.0 ", default-features = false, path="../erc20",features = ["ink-as-dependency"]}

ctoken = {version="0.1.0 ", default-features = false, path="../ctoken",features = ["ink-as-dependency"]}

[lib]
name = "scm_finance"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]


[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "ctoken/std",
     "erc20/std"
]


ink-as-dependency = []
